cmake_minimum_required(VERSION 3.6)

set(PROJECT_NAME
    VideoRenderingVisualizer
)

project(VideoRenderingVisualizer VERSION 1.0)

set(CMAKE_CXX_STANDARD
    14
)
set(RESOURCES_DIRECTORY_NAME
    resources
)

#
# Configure build properties...
#
set(VERSION_MAJOR "1")
set(VERSION_MINOR "1")
set(VERSION_PATCH "0")


#
# Configure Operating System...
#
add_compile_definitions(WINDOWS=1)

#
# Open Sources Path...
#
set (OPEN_SOURCES_PATH "../../../../../../../OpenSources")

#
# WX Widgets Path...
#
set (WX_WIDGETS_PATH ${OPEN_SOURCES_PATH}/wxWidgets)

#
# GLFW Path...
#
set(GLFW_PATH ${OPEN_SOURCES_PATH}/glfw)

#
# Glew Path...
#
set (GLEW_PATH ${OPEN_SOURCES_PATH}/glew-2.1.0)

#
# Configure Operating System...
#
add_compile_definitions(WINDOWS=1)

#
# Include Directories...
#
include_directories(
    ${WX_WIDGETS_PATH}/include
    ${WX_WIDGETS_PATH}/lib/gcc_lib/mswu
    ${GLFW_PATH}/include
    ${GLEW_PATH}/include
)


set(VIDEO_RENDERING_VISUALIZER_INCLUDES_FILES
    ./core/AbstractGuiWindow.h
    ./core/AppConfigurationItems.h
    ./core/AppLogDialog.h
    ./core/AppLogListView.h
    ./core/CallListBox.h
    ./core/CompositorListBox.h
    ./core/CompositorTextBox.h
    ./core/ConfigurationProvider.h
    ./core/DialogConfigurationItems.h
    ./core/EventListView.h
    ./core/EventViewerDialog.h
    ./core/FrameConfigurationItems.h
    ./core/GuiConfigurationFactory.h
    ./core/GuiDataItems.h
    ./core/GuiManager.h
    ./core/GuiPaths.h
    ./core/LabelConfigurationItems.h
    ./core/LogStatisticsDialog.h
    ./core/LogStatisticsListView.h
    ./core/MainLeftBottomWindow.h
    ./core/MainLeftTopWindow.h
    ./core/MainLeftTopWindowLowerSubWindow.h
    ./core/MainLeftTopWindowUpperSubWindow.h
    ./core/MainLeftWindow.h
    ./core/MainRightBottomWindow.h
    ./core/MainRightTopWindow.h
    ./core/MainRightTopWindowLowerSubWindow.h
    ./core/MainRightTopWindowUpperSubWindow.h
    ./core/MainRightWindow.h
    ./core/MainWindow.h
    ./core/MenuConfigurationItems.h
    ./core/MenuItemConfigurationItems.h
    ./core/RenderingPipelinesCanvas.h
    ./core/RenderingPipelinesHtmlWindow.h
    ./core/RenderingPipelinesListView.h
    ./core/RenderingPipelinesTimeSlider.h
    ./core/RenderingPipelinesVisualizerDialog.h
    ./core/SliderConfigurationItems.h
    ./core/TLogsFolderDialog.h
    ./core/VideoRenderingVisualizerApp.h
    ./core/VideoRenderingVisualizerException.h
    ./core/VideoRenderingVisualizerFrame.h
    ./interfaces/IAppConfigurationItems.h
    ./interfaces/IConfigurationProvider.h
    ./interfaces/IDialogConfigurationItems.h
    ./interfaces/IFrameConfigurationItems.h
    ./interfaces/IGuiConfigurationFactory.h
    ./interfaces/IGuiDataItems.h
    ./interfaces/IGuiManager.h
    ./interfaces/IGuiPaths.h
    ./interfaces/IGuiWindow.h
    ./interfaces/ILabelConfigurationItems.h
    ./interfaces/IMenuConfigurationItems.h
    ./interfaces/IMenuItemConfigurationItems.h
    ./interfaces/ISliderConfigurationItems.h
    ./interfaces/Main.h
)

set(VIDEO_RENDERING_VISUALIZER_SOURCES_FILES
    ./core/AbstractGuiWindow.cpp
    ./core/AppConfigurationItems.cpp
    ./core/AppLogDialog.cpp
    ./core/AppLogListView.cpp
    ./core/CallListBox.cpp
    ./core/CompositorListBox.cpp
    ./core/CompositorTextBox.cpp
    ./core/ConfigurationProvider.cpp
    ./core/DialogConfigurationItems.cpp
    ./core/EventListView.cpp
    ./core/EventViewerDialog.cpp
    ./core/FrameConfigurationItems.cpp
    ./core/GuiConfigurationFactory.cpp
    ./core/GuiDataItems.cpp
    ./core/GuiManager.cpp
    ./core/GuiPaths.cpp
    ./core/LabelConfigurationItems.cpp
    ./core/LogStatisticsDialog.cpp
    ./core/LogStatisticsListView.cpp
    ./core/Main.cpp
    ./core/MainLeftBottomWindow.cpp
    ./core/MainLeftTopWindow.cpp
    ./core/MainLeftTopWindowLowerSubWindow.cpp
    ./core/MainLeftTopWindowUpperSubWindow.cpp
    ./core/MainLeftWindow.cpp
    ./core/MainRightBottomWindow.cpp
    ./core/MainRightTopWindow.cpp
    ./core/MainRightTopWindowLowerSubWindow.cpp
    ./core/MainRightTopWindowUpperSubWindow.cpp
    ./core/MainRightWindow.cpp
    ./core/MainWindow.cpp
    ./core/MenuConfigurationItems.cpp
    ./core/MenuItemConfigurationItems.cpp
    ./core/RenderingPipelinesCanvas.cpp
    ./core/RenderingPipelinesHtmlWindow.cpp
    ./core/RenderingPipelinesListView.cpp
    ./core/RenderingPipelinesTimeSlider.cpp
    ./core/RenderingPipelinesVisualizerDialog.cpp
    ./core/SliderConfigurationItems.cpp
    ./core/TLogsFolderDialog.cpp
    ./core/VideoRenderingVisualizerApp.cpp
    ./core/VideoRenderingVisualizerFrame.cpp
)

set(VIDEO_RENDERING_VISUALIZER_INCLUDES
    ./core
    ./interfaces
)

set(VIDEO_RENDERING_VISUALIZER_SOURCES
    ${VIDEO_RENDERING_VISUALIZER_INCLUDES_FILES}
    ${VIDEO_RENDERING_VISUALIZER_SOURCES_FILES}
)

set(BASE_INCLUDES_FILES
    ../../../Base/core/AbstractPath.h
    ../../../Base/core/AbstractPathBuilder.h
    ../../../Base/core/AlmostComparator.h
    ../../../Base/core/AndBitOperator.h
    ../../../Base/core/BaseException.h
    ../../../Base/core/BaseLogic.h
    ../../../Base/core/Bits.h
    ../../../Base/core/ClassType.h
    ../../../Base/core/ClassTypes.h
    ../../../Base/core/CollectionComparator.h
    ../../../Base/core/Collections.h
    ../../../Base/core/ComparableComparator.h
    ../../../Base/core/Comparator.h
    ../../../Base/core/ComparatorFactory.h
    ../../../Base/core/CompareToBuilder.h
    ../../../Base/core/ConsoleColorSetter.h
    ../../../Base/core/DereferenceComparableComparator.h
    ../../../Base/core/DereferenceComparableComparator2.h
    ../../../Base/core/DereferenceEquatableComparator.h
    ../../../Base/core/DereferenceEquatableComparator2.h
    ../../../Base/core/Environment.h
    ../../../Base/core/EqualBuilder.h
    ../../../Base/core/EquatableComparator.h
    ../../../Base/core/ErrorCodes.h
    ../../../Base/core/ErrorMessages.h
    ../../../Base/core/Indexes.h
    ../../../Base/core/Interval.h
    ../../../Base/core/IntervalMap.h
    ../../../Base/core/IntervalMapIterator.h
    ../../../Base/core/InvalidArgumentException.h
    ../../../Base/core/InvertComparator.h
    ../../../Base/core/IterableComparator.h
    ../../../Base/core/IterableObject.h
    ../../../Base/core/IteratorComparator.h
    ../../../Base/core/KmpStringSearch.h
    ../../../Base/core/List.h
    ../../../Base/core/ListIterator.h
    ../../../Base/core/ListReverseIterator.h
    ../../../Base/core/MapComparator.h
    ../../../Base/core/Matrix.h
    ../../../Base/core/MessageWriter.h
    ../../../Base/core/NotBitOperator.h
    ../../../Base/core/NotImplementedException.h
    ../../../Base/core/OperatingSystemControlSettings.h
    ../../../Base/core/OperatingSystemType.h
    ../../../Base/core/OrBitOperator.h
    ../../../Base/core/Pair.h
    ../../../Base/core/PathBuilder.h
    ../../../Base/core/PathDecomposition.h
    ../../../Base/core/Position.h
    ../../../Base/core/RandomGenerator.h
    ../../../Base/core/Range.h
    ../../../Base/core/ReferenceCounterHolder.h
    ../../../Base/core/SetIterator.h
    ../../../Base/core/SharedPtr.h
    ../../../Base/core/SkipIterator.h
    ../../../Base/core/Sorting.h
    ../../../Base/core/StringComparable.h
    ../../../Base/core/StringConversion.h
    ../../../Base/core/StringEquality.h
    ../../../Base/core/StringSearch.h
    ../../../Base/core/StringUtils.h
    ../../../Base/core/Strings.h
    ../../../Base/core/Thread.h
    ../../../Base/core/ToString.h
    ../../../Base/core/Triple.h
    ../../../Base/core/TwoDimensionalVector.h
    ../../../Base/core/TwoDimensionalVectorIterator.h
    ../../../Base/core/UnexpectedException.h
    ../../../Base/core/UnixPath.h
    ../../../Base/core/UnixPathBuilder.h
    ../../../Base/core/Uuid.h
    ../../../Base/core/VectorIterator.h
    ../../../Base/core/VectorReverseIterator.h
    ../../../Base/core/WindowsConsoleColorHandler.h
    ../../../Base/core/WindowsDefinitions.h
    ../../../Base/core/WindowsOperatingSystemType.h
    ../../../Base/core/WindowsPath.h
    ../../../Base/core/WindowsPathSettings.h
    ../../../Base/core/WindowsSystemPath.h
    ../../../Base/core/XorBitOperator.h
    ../../../Base/interfaces/ColorType.h
    ../../../Base/interfaces/Colors.h
    ../../../Base/interfaces/DateTime.h
    ../../../Base/interfaces/DateTimeInterval.h
    ../../../Base/interfaces/Duration.h
    ../../../Base/interfaces/Handle.h
    ../../../Base/interfaces/IBinaryBitOperator.h
    ../../../Base/interfaces/IBinaryComparator.h
    ../../../Base/interfaces/IBitOperator.h
    ../../../Base/interfaces/IBuilder.h
    ../../../Base/interfaces/ICalculator.h
    ../../../Base/interfaces/IClassType.h
    ../../../Base/interfaces/IClone.h
    ../../../Base/interfaces/ICollection.h
    ../../../Base/interfaces/IComparableComparator.h
    ../../../Base/interfaces/IComparatorFactory.h
    ../../../Base/interfaces/IConsoleColorHandler.h
    ../../../Base/interfaces/IEquatableComparator.h
    ../../../Base/interfaces/IFromString.h
    ../../../Base/interfaces/IHashCodeProvider.h
    ../../../Base/interfaces/IIntervalMap.h
    ../../../Base/interfaces/IIterable.h
    ../../../Base/interfaces/IIterator.h
    ../../../Base/interfaces/IKeyIterable.h
    ../../../Base/interfaces/IKeyReverseIterable.h
    ../../../Base/interfaces/IList.h
    ../../../Base/interfaces/IMatch.h
    ../../../Base/interfaces/IMatrix.h
    ../../../Base/interfaces/IMessageWriter.h
    ../../../Base/interfaces/IOperatingSystemControlSettings.h
    ../../../Base/interfaces/IOperatingSystemPathSettings.h
    ../../../Base/interfaces/IOperatingSystemType.h
    ../../../Base/interfaces/IPath.h
    ../../../Base/interfaces/IPathBuilder.h
    ../../../Base/interfaces/IPathDecomposition.h
    ../../../Base/interfaces/IPosition.h
    ../../../Base/interfaces/IRandomGenerator.h
    ../../../Base/interfaces/IResourceReader.h
    ../../../Base/interfaces/IReverseIterable.h
    ../../../Base/interfaces/IReverseIterator.h
    ../../../Base/interfaces/ISizableCollection.h
    ../../../Base/interfaces/ISkipIterator.h
    ../../../Base/interfaces/IStringConversion.h
    ../../../Base/interfaces/IThread.h
    ../../../Base/interfaces/IToString.h
    ../../../Base/interfaces/ITwoDimensionalVector.h
    ../../../Base/interfaces/IUnaryBitOperator.h
    ../../../Base/interfaces/IUuid.h
    ../../../Base/interfaces/IValidator.h
    ../../../Base/interfaces/IValueIterable.h
    ../../../Base/interfaces/IValueReverseIterable.h
    ../../../Base/interfaces/IVisitor.h
    ../../../Base/interfaces/OperatingSystemType.h
    ../../../Base/interfaces/ReferenceCounter.h
    ../../../Base/interfaces/ReferenceCounterHolder.h
    ../../../Base/interfaces/SmartPointers.h
    ../../../Base/interfaces/StandardFileDescriptor.h
    ../../../Base/interfaces/StringComparisonType.h
    ../../../Base/interfaces/TimeUnit.h
    ../../../Base/interfaces/TimeUtils.h
    ../../../Base/interfaces/WinHandle.h
    ../../../Base/interfaces/WindowsSystemPathType.h
)

set(BASE_SOURCES_FILES
    ../../../Base/core/AbstractPath.cpp
    ../../../Base/core/AbstractPathBuilder.cpp
    ../../../Base/core/AndBitOperator.cpp
    ../../../Base/core/Bits.cpp
    ../../../Base/core/ClassType.cpp
    ../../../Base/core/Collections.cpp
    ../../../Base/core/ComparatorFactory.cpp
    ../../../Base/core/CompareToBuilder.cpp
    ../../../Base/core/ConsoleColorSetter.cpp
    ../../../Base/core/DateTime.cpp
    ../../../Base/core/Environment.cpp
    ../../../Base/core/EqualBuilder.cpp
    ../../../Base/core/ErrorCodes.cpp
    ../../../Base/core/ErrorMessages.cpp
    ../../../Base/core/KmpStringSearch.cpp
    ../../../Base/core/MessageWriter.cpp
    ../../../Base/core/NotBitOperator.cpp
    ../../../Base/core/OperatingSystemControlSettings.cpp
    ../../../Base/core/OrBitOperator.cpp
    ../../../Base/core/PathBuilder.cpp
    ../../../Base/core/PathDecomposition.cpp
    ../../../Base/core/RandomGenerator.cpp
    ../../../Base/core/ReferenceCounter.cpp
    ../../../Base/core/SkipIterator.cpp
    ../../../Base/core/StringComparable.cpp
    ../../../Base/core/StringConversion.cpp
    ../../../Base/core/StringEquality.cpp
    ../../../Base/core/StringSearch.cpp
    ../../../Base/core/StringUtils.cpp
    ../../../Base/core/Strings.cpp
    ../../../Base/core/Tests.cpp
    ../../../Base/core/Thread.cpp
    ../../../Base/core/TimeUnit.cpp
    ../../../Base/core/TimeUtils.cpp
    ../../../Base/core/ToString.cpp
    ../../../Base/core/UnixPath.cpp
    ../../../Base/core/UnixPathBuilder.cpp
    ../../../Base/core/Uuid.cpp
    ../../../Base/core/WindowsConsoleColorHandler.cpp
    ../../../Base/core/WindowsOperatingSystemType.cpp
    ../../../Base/core/WindowsPath.cpp
    ../../../Base/core/WindowsPathSettings.cpp
    ../../../Base/core/WindowsSystemPath.cpp
    ../../../Base/core/XorBitOperator.cpp
)

set(BASE_INCLUDES
    ../../../Base/core
    ../../../Base/interfaces
)

set(BASE_SOURCES
    ${BASE_INCLUDES_FILES}
    ${BASE_SOURCES_FILES}
)

add_library(Base STATIC
    ${BASE_SOURCES}
)

target_link_libraries(Base
    PRIVATE 
)

set(TABULAR_DATA_INCLUDES_FILES
    ../../../TabularData/core/Event.h
    ../../../TabularData/core/EventLog.h
    ../../../TabularData/core/File.h
    ../../../TabularData/core/FileInformation.h
    ../../../TabularData/core/FileLineIterator.h
    ../../../TabularData/core/FileWriter.h
    ../../../TabularData/core/Record.h
    ../../../TabularData/core/TabularDataException.h
    ../../../TabularData/core/TabularFile.h
    ../../../TabularData/core/TabularFileInformation.h
    ../../../TabularData/core/TabularHeader.h
    ../../../TabularData/core/TabularHeaderParser.h
    ../../../TabularData/core/TabularRecord.h
    ../../../TabularData/core/TabularRecordIterator.h
    ../../../TabularData/core/TabularRecordParser.h
    ../../../TabularData/core/TabularTable.h
    ../../../TabularData/core/TabularTableWriter.h
    ../../../TabularData/core/TokensParser.h
    ../../../TabularData/interfaces/EventType.h
    ../../../TabularData/interfaces/IEvent.h
    ../../../TabularData/interfaces/IEventLog.h
    ../../../TabularData/interfaces/IFile.h
    ../../../TabularData/interfaces/IFileInformation.h
    ../../../TabularData/interfaces/IRecord.h
    ../../../TabularData/interfaces/ITabularFile.h
    ../../../TabularData/interfaces/ITabularFileInformation.h
    ../../../TabularData/interfaces/ITabularHeader.h
    ../../../TabularData/interfaces/ITabularHeaderParser.h
    ../../../TabularData/interfaces/ITabularRecord.h
    ../../../TabularData/interfaces/ITabularRecordIterator.h
    ../../../TabularData/interfaces/ITabularRecordParser.h
    ../../../TabularData/interfaces/ITabularTable.h
    ../../../TabularData/interfaces/ITabularTableWriter.h
    ../../../TabularData/interfaces/ITokensParser.h
    ../../../TabularData/interfaces/IValueTransformer.h
    ../../../TabularData/interfaces/IWriter.h
    ../../../TabularData/interfaces/ParsingPolicyType.h
)

set(TABULAR_DATA_SOURCES_FILES
    ../../../TabularData/core/Event.cpp
    ../../../TabularData/core/EventLog.cpp
    ../../../TabularData/core/File.cpp
    ../../../TabularData/core/FileInformation.cpp
    ../../../TabularData/core/FileLineIterator.cpp
    ../../../TabularData/core/FileWriter.cpp
    ../../../TabularData/core/Record.cpp
    ../../../TabularData/core/TabularFile.cpp
    ../../../TabularData/core/TabularFileInformation.cpp
    ../../../TabularData/core/TabularHeader.cpp
    ../../../TabularData/core/TabularHeaderParser.cpp
    ../../../TabularData/core/TabularRecord.cpp
    ../../../TabularData/core/TabularRecordIterator.cpp
    ../../../TabularData/core/TabularRecordParser.cpp
    ../../../TabularData/core/TabularTable.cpp
    ../../../TabularData/core/TabularTableWriter.cpp
    ../../../TabularData/core/TokensParser.cpp
)

set(TABULAR_DATA_INCLUDES
    ../../../TabularData/core
    ../../../TabularData/interfaces
)

set(TABULAR_DATA_SOURCES
    ${TABULAR_DATA_INCLUDES_FILES}
    ${TABULAR_DATA_SOURCES_FILES}
)

add_library(TabularData STATIC
    ${TABULAR_DATA_SOURCES}
)

target_link_libraries(TabularData
    PRIVATE Base
)

set(DATA_CONTAINER_MANAGEMENT_INCLUDES_FILES
    ../../../DataContainerManagement/core/AbstractDataItemValue.h
    ../../../DataContainerManagement/core/BooleanDataItemValue.h
    ../../../DataContainerManagement/core/DataCatalog.h
    ../../../DataContainerManagement/core/DataContainer.h
    ../../../DataContainerManagement/core/DataContainerException.h
    ../../../DataContainerManagement/core/DataContainerUpdateFunctors.h
    ../../../DataContainerManagement/core/DataItem.h
    ../../../DataContainerManagement/core/DateTimeDataItemValue.h
    ../../../DataContainerManagement/core/DoubleDataItemValue.h
    ../../../DataContainerManagement/core/DurationDataItemValue.h
    ../../../DataContainerManagement/core/IntegerDataItemValue.h
    ../../../DataContainerManagement/core/LongDataItemValue.h
    ../../../DataContainerManagement/core/StringArrayArrayDataItemValue.h
    ../../../DataContainerManagement/core/StringArrayDataItemValue.h
    ../../../DataContainerManagement/core/StringDataItemValue.h
    ../../../DataContainerManagement/interfaces/IDataCatalog.h
    ../../../DataContainerManagement/interfaces/IDataContainer.h
    ../../../DataContainerManagement/interfaces/IDataContainerUpdateFunctors.h
    ../../../DataContainerManagement/interfaces/IDataItem.h
    ../../../DataContainerManagement/interfaces/IDataItemValue.h
)

set(DATA_CONTAINER_MANAGEMENT_SOURCES_FILES
    ../../../DataContainerManagement/core/AbstractDataItemValue.cpp
    ../../../DataContainerManagement/core/BooleanDataItemValue.cpp
    ../../../DataContainerManagement/core/DataCatalog.cpp
    ../../../DataContainerManagement/core/DataContainer.cpp
    ../../../DataContainerManagement/core/DataContainerUpdateFunctors.cpp
    ../../../DataContainerManagement/core/DataItem.cpp
    ../../../DataContainerManagement/core/DateTimeDataItemValue.cpp
    ../../../DataContainerManagement/core/DoubleDataItemValue.cpp
    ../../../DataContainerManagement/core/DurationDataItemValue.cpp
    ../../../DataContainerManagement/core/IntegerDataItemValue.cpp
    ../../../DataContainerManagement/core/LongDataItemValue.cpp
    ../../../DataContainerManagement/core/StringArrayArrayDataItemValue.cpp
    ../../../DataContainerManagement/core/StringArrayDataItemValue.cpp
    ../../../DataContainerManagement/core/StringDataItemValue.cpp
)

set(DATA_CONTAINER_MANAGEMENT_INCLUDES
    ../../../DataContainerManagement/core
    ../../../DataContainerManagement/interfaces
)

set(DATA_CONTAINER_MANAGEMENT_SOURCES
    ${DATA_CONTAINER_MANAGEMENT_INCLUDES_FILES}
    ${DATA_CONTAINER_MANAGEMENT_SOURCES_FILES}
)

add_library(DataContainerManagement STATIC
    ${DATA_CONTAINER_MANAGEMENT_SOURCES}
)

target_link_libraries(DataContainerManagement
    PRIVATE Base TabularData Logging
)

set(DATA_STRUCTURES_INCLUDES_FILES
    ../../../DataStructures/binarytree/BinaryTreeException.h
    ../../../DataStructures/binarytree/core/BinaryTree.h
    ../../../DataStructures/binarytree/core/BinaryTreeEndNode.h
    ../../../DataStructures/binarytree/core/BinaryTreeInorderIterator.h
    ../../../DataStructures/binarytree/core/BinaryTreeInorderReverseIterator.h
    ../../../DataStructures/binarytree/core/BinaryTreeLevelOrderIterator.h
    ../../../DataStructures/binarytree/core/BinaryTreeLevelOrderWithEndNodesIterator.h
    ../../../DataStructures/binarytree/core/BinaryTreeLogic.h
    ../../../DataStructures/binarytree/core/BinaryTreeNode.h
    ../../../DataStructures/binarytree/core/BinaryTreeNodeListIterator.h
    ../../../DataStructures/binarytree/core/BinaryTreeNodeListReverseIterator.h
    ../../../DataStructures/binarytree/core/BinaryTreeNodes.h
    ../../../DataStructures/binarytree/core/BinaryTreePostorderIterator.h
    ../../../DataStructures/binarytree/core/BinaryTreePreorderInorderTraversalBuilder.h
    ../../../DataStructures/binarytree/core/BinaryTreePreorderIterator.h
    ../../../DataStructures/binarytree/core/BinaryTreePreorderPostorderTraversalBuilder.h
    ../../../DataStructures/binarytree/core/BinaryTreeStreamBuilder.h
    ../../../DataStructures/binarytree/core/BinaryTreeTraversalBuilder.h
    ../../../DataStructures/binarytree/core/BinaryTreeTraversalsBuilder.h
    ../../../DataStructures/binarytree/interfaces/IBinaryTree.h
    ../../../DataStructures/binarytree/interfaces/IBinaryTreeLogic.h
    ../../../DataStructures/binarytree/interfaces/IBinaryTreeNode.h
    ../../../DataStructures/binarytree/interfaces/IBinaryTreeNodeIterator.h
    ../../../DataStructures/binarytree/interfaces/IBinaryTreeNodeReverseIterator.h
    ../../../DataStructures/binarytree/interfaces/IBinaryTreeTraversal.h
    ../../../DataStructures/bitarray/BitArrayException.h
    ../../../DataStructures/bitarray/core/Bit32Array.h
    ../../../DataStructures/bitarray/core/Bit32ArrayIterator.h
    ../../../DataStructures/bitarray/core/Bit32ArrayReverseIterator.h
    ../../../DataStructures/bitarray/core/BitArray.h
    ../../../DataStructures/bitarray/core/BitArrayIterator.h
    ../../../DataStructures/bitarray/core/BitArrayReverseIterator.h
    ../../../DataStructures/bitarray/interfaces/IBit32Array.h
    ../../../DataStructures/bitarray/interfaces/IBitArray.h
    ../../../DataStructures/cache/CacheException.h
    ../../../DataStructures/cache/core/AbstractCache.h
    ../../../DataStructures/cache/core/CacheProperties.h
    ../../../DataStructures/cache/interfaces/ICache.h
    ../../../DataStructures/cache/interfaces/ICacheProperties.h
    ../../../DataStructures/cache/interfaces/LRUCache.h
    ../../../DataStructures/cache/interfaces/MRUCache.h
    ../../../DataStructures/core/DataStructureException.h
    ../../../DataStructures/doublylinkedlist/DoublyLinkedListException.h
    ../../../DataStructures/doublylinkedlist/core/DoublyLinkedList.h
    ../../../DataStructures/doublylinkedlist/core/DoublyLinkedListKeyValueNodeIterator.h
    ../../../DataStructures/doublylinkedlist/core/DoublyLinkedListKeyValueNodeReverseIterator.h
    ../../../DataStructures/doublylinkedlist/core/DoublyLinkedListNode.h
    ../../../DataStructures/doublylinkedlist/core/DoublyLinkedListNodeIterator.h
    ../../../DataStructures/doublylinkedlist/core/DoublyLinkedListNodeReverseIterator.h
    ../../../DataStructures/doublylinkedlist/core/DoublyLinkedListNodeValueIterator.h
    ../../../DataStructures/doublylinkedlist/core/DoublyLinkedListNodeValueReverseIterator.h
    ../../../DataStructures/doublylinkedlist/interfaces/IDoublyLinkedList.h
    ../../../DataStructures/doublylinkedlist/interfaces/IDoublyLinkedListNode.h
    ../../../DataStructures/graph/GraphException.h
    ../../../DataStructures/graph/core/AdjacencyMatrix.h
    ../../../DataStructures/graph/core/Edge.h
    ../../../DataStructures/graph/core/Graph.h
    ../../../DataStructures/graph/core/GraphBuilder.h
    ../../../DataStructures/graph/core/GraphDefinition.h
    ../../../DataStructures/graph/core/GraphLogic.h
    ../../../DataStructures/graph/core/Route.h
    ../../../DataStructures/graph/core/Vertex.h
    ../../../DataStructures/graph/core/Walk.h
    ../../../DataStructures/graph/interfaces/IAdjacencyMatrix.h
    ../../../DataStructures/graph/interfaces/IEdge.h
    ../../../DataStructures/graph/interfaces/IGraph.h
    ../../../DataStructures/graph/interfaces/IGraphBuilder.h
    ../../../DataStructures/graph/interfaces/IGraphDefinition.h
    ../../../DataStructures/graph/interfaces/IGraphLogic.h
    ../../../DataStructures/graph/interfaces/IGraphTraversal.h
    ../../../DataStructures/graph/interfaces/IPathFinder.h
    ../../../DataStructures/graph/interfaces/IRoute.h
    ../../../DataStructures/graph/interfaces/IVertex.h
    ../../../DataStructures/graph/interfaces/IWalk.h
    ../../../DataStructures/interfaces/IteratorOfIteratorCollection.h
    ../../../DataStructures/linkedlist/LinkedListException.h
    ../../../DataStructures/linkedlist/core/LinkedList.h
    ../../../DataStructures/linkedlist/core/LinkedListNode.h
    ../../../DataStructures/linkedlist/core/LinkedListNodeIterator.h
    ../../../DataStructures/linkedlist/core/LinkedListNodeValueIterator.h
    ../../../DataStructures/linkedlist/interfaces/ILinkedList.h
    ../../../DataStructures/linkedlist/interfaces/ILinkedListNode.h
    ../../../DataStructures/node/NodeException.h
    ../../../DataStructures/node/core/KeyIterator.h
    ../../../DataStructures/node/core/KeyReverseIterator.h
    ../../../DataStructures/node/core/KeyValueNode.h
    ../../../DataStructures/node/core/ValueIterator.h
    ../../../DataStructures/node/core/ValueReverseIterator.h
    ../../../DataStructures/node/interfaces/IKeyValueNode.h
    ../../../DataStructures/priorityqueue/PriorityQueueException.h
    ../../../DataStructures/priorityqueue/core/AbstractPriorityQueue.h
    ../../../DataStructures/priorityqueue/core/PriorityQueue.h
    ../../../DataStructures/priorityqueue/interfaces/IPriorityQueue.h
    ../../../DataStructures/tree/core/Tree.h
    ../../../DataStructures/tree/core/TreeException.h
    ../../../DataStructures/tree/core/TreeNode.h
    ../../../DataStructures/tree/interfaces/ITree.h
    ../../../DataStructures/tree/interfaces/ITreeNode.h
)

set(DATA_STRUCTURES_SOURCES_FILES
    ../../../DataStructures/bitarray/core/Bit32Array.cpp
    ../../../DataStructures/bitarray/core/Bit32ArrayIterator.cpp
    ../../../DataStructures/bitarray/core/Bit32ArrayReverseIterator.cpp
    ../../../DataStructures/bitarray/core/BitArray.cpp
    ../../../DataStructures/bitarray/core/BitArrayIterator.cpp
    ../../../DataStructures/bitarray/core/BitArrayReverseIterator.cpp
    ../../../DataStructures/cache/core/CacheProperties.cpp
)

set(DATA_STRUCTURES_INCLUDES
    ../../../DataStructures/binarytree
    ../../../DataStructures/binarytree/core
    ../../../DataStructures/binarytree/interfaces
    ../../../DataStructures/bitarray
    ../../../DataStructures/bitarray/core
    ../../../DataStructures/bitarray/interfaces
    ../../../DataStructures/cache
    ../../../DataStructures/cache/core
    ../../../DataStructures/cache/interfaces
    ../../../DataStructures/core
    ../../../DataStructures/doublylinkedlist
    ../../../DataStructures/doublylinkedlist/core
    ../../../DataStructures/doublylinkedlist/interfaces
    ../../../DataStructures/graph
    ../../../DataStructures/graph/core
    ../../../DataStructures/graph/interfaces
    ../../../DataStructures/interfaces
    ../../../DataStructures/linkedlist
    ../../../DataStructures/linkedlist/core
    ../../../DataStructures/linkedlist/interfaces
    ../../../DataStructures/node
    ../../../DataStructures/node/core
    ../../../DataStructures/node/interfaces
    ../../../DataStructures/priorityqueue
    ../../../DataStructures/priorityqueue/core
    ../../../DataStructures/priorityqueue/interfaces
    ../../../DataStructures/tree/core
    ../../../DataStructures/tree/interfaces
)

set(DATA_STRUCTURES_SOURCES
    ${DATA_STRUCTURES_INCLUDES_FILES}
    ${DATA_STRUCTURES_SOURCES_FILES}
)

add_library(DataStructures STATIC
    ${DATA_STRUCTURES_SOURCES}
)

target_link_libraries(DataStructures
    PRIVATE Base
)

set(LOGGING_INCLUDES_FILES
    ../../../Logging/core/DateTimeTransformer.h
    ../../../Logging/core/Log.h
    ../../../Logging/core/LogHeader.h
    ../../../Logging/core/LogInformation.h
    ../../../Logging/core/LogLevelTransformer.h
    ../../../Logging/core/LogRecord.h
    ../../../Logging/core/LogRecordIterator.h
    ../../../Logging/core/LogStatistics.h
    ../../../Logging/core/LogTokensParser.h
    ../../../Logging/core/LogWriter.h
    ../../../Logging/core/Logger.h
    ../../../Logging/core/LoggerFactory.h
    ../../../Logging/core/LoggerImpl.h
    ../../../Logging/core/Loggers.h
    ../../../Logging/core/LoggingException.h
    ../../../Logging/core/SizeTTransformer.h
    ../../../Logging/core/StringTransformer.h
    ../../../Logging/core/UnsignedIntegerTransformer.h
    ../../../Logging/core/UnsignedLongTransformer.h
    ../../../Logging/interfaces/ILog.h
    ../../../Logging/interfaces/ILogHeader.h
    ../../../Logging/interfaces/ILogInformation.h
    ../../../Logging/interfaces/ILogRecord.h
    ../../../Logging/interfaces/ILogStatistics.h
    ../../../Logging/interfaces/ILogWriter.h
    ../../../Logging/interfaces/ILogger.h
    ../../../Logging/interfaces/ILoggerFactory.h
    ../../../Logging/interfaces/ILoggerImpl.h
    ../../../Logging/interfaces/ILoggers.h
    ../../../Logging/interfaces/LogLevel.h
    ../../../Logging/interfaces/LogParsingErrorType.h
)

set(LOGGING_SOURCES_FILES
    ../../../Logging/core/DateTimeTransformer.cpp
    ../../../Logging/core/Log.cpp
    ../../../Logging/core/LogHeader.cpp
    ../../../Logging/core/LogInformation.cpp
    ../../../Logging/core/LogLevelTransformer.cpp
    ../../../Logging/core/LogRecord.cpp
    ../../../Logging/core/LogRecordIterator.cpp
    ../../../Logging/core/LogStatistics.cpp
    ../../../Logging/core/LogTokensParser.cpp
    ../../../Logging/core/LogWriter.cpp
    ../../../Logging/core/Logger.cpp
    ../../../Logging/core/LoggerFactory.cpp
    ../../../Logging/core/LoggerImpl.cpp
    ../../../Logging/core/Loggers.cpp
    ../../../Logging/core/SizeTTransformer.cpp
    ../../../Logging/core/StringTransformer.cpp
    ../../../Logging/core/UnsignedIntegerTransformer.cpp
    ../../../Logging/core/UnsignedLongTransformer.cpp
)

set(LOGGING_INCLUDES
    ../../../Logging/core
    ../../../Logging/interfaces
)

set(LOGGING_SOURCES
    ${LOGGING_INCLUDES_FILES}
    ${LOGGING_SOURCES_FILES}
)

add_library(Logging STATIC
    ${LOGGING_SOURCES}
)

target_link_libraries(Logging
    PRIVATE Base TabularData
)

set(TLOGGING_INCLUDES_FILES
    ../TLogging/core/AddViewRecord.h
    ../TLogging/core/CallEndedRecord.h
    ../TLogging/core/CallStartedRecord.h
    ../TLogging/core/CompositorCreatedRecord.h
    ../TLogging/core/CompositorDestroyedRecord.h
    ../TLogging/core/EventTLog.h
    ../TLogging/core/RemoveViewRecord.h
    ../TLogging/core/SetConfigurationRecord.h
    ../TLogging/core/SetViewProperties.h
    ../TLogging/core/SetViewPropertiesRecord.h
    ../TLogging/core/TLog.h
    ../TLogging/core/TLogInformation.h
    ../TLogging/core/TLogNotificationHandler.h
    ../TLogging/core/TLogParser.h
    ../TLogging/core/TLogProcessor.h
    ../TLogging/core/TLogRecordIterator.h
    ../TLogging/core/TLogRecordParser.h
    ../TLogging/core/TLogStatistics.h
    ../TLogging/core/TLogStatisticsCollection.h
    ../TLogging/core/TLogTree.h
    ../TLogging/core/TLoggingException.h
    ../TLogging/core/Volume.h
    ../TLogging/interfaces/IAddViewRecord.h
    ../TLogging/interfaces/ICallEndedRecord.h
    ../TLogging/interfaces/ICallStartedRecord.h
    ../TLogging/interfaces/ICompositorCreatedRecord.h
    ../TLogging/interfaces/ICompositorDestroyedRecord.h
    ../TLogging/interfaces/IEventTLog.h
    ../TLogging/interfaces/IRemoveViewRecord.h
    ../TLogging/interfaces/ISetConfigurationRecord.h
    ../TLogging/interfaces/ISetViewPropertiesRecord.h
    ../TLogging/interfaces/ITLog.h
    ../TLogging/interfaces/ITLogInformation.h
    ../TLogging/interfaces/ITLogNotificationHandler.h
    ../TLogging/interfaces/ITLogParser.h
    ../TLogging/interfaces/ITLogProcessor.h
    ../TLogging/interfaces/ITLogRecord.h
    ../TLogging/interfaces/ITLogRecordParser.h
    ../TLogging/interfaces/ITLogStatistics.h
    ../TLogging/interfaces/ITLogStatisticsCollection.h
    ../TLogging/interfaces/ITLogTree.h
    ../TLogging/interfaces/IVolume.h
    ../TLogging/interfaces/TLogRecordType.h
)

set(TLOGGING_SOURCES_FILES
    ../TLogging/core/AddViewRecord.cpp
    ../TLogging/core/CallEndedRecord.cpp
    ../TLogging/core/CallStartedRecord.cpp
    ../TLogging/core/CompositorCreatedRecord.cpp
    ../TLogging/core/CompositorDestroyedRecord.cpp
    ../TLogging/core/EventTLog.cpp
    ../TLogging/core/RemoveViewRecord.cpp
    ../TLogging/core/SetConfigurationRecord.cpp
    ../TLogging/core/SetViewProperties.cpp
    ../TLogging/core/SetViewPropertiesRecord.cpp
    ../TLogging/core/TLog.cpp
    ../TLogging/core/TLogInformation.cpp
    ../TLogging/core/TLogNotificationHandler.cpp
    ../TLogging/core/TLogParser.cpp
    ../TLogging/core/TLogProcessor.cpp
    ../TLogging/core/TLogRecordIterator.cpp
    ../TLogging/core/TLogRecordParser.cpp
    ../TLogging/core/TLogStatistics.cpp
    ../TLogging/core/TLogStatisticsCollection.cpp
    ../TLogging/core/TLogTree.cpp
)

set(TLOGGING_INCLUDES
    ../TLogging/core
    ../TLogging/interfaces
)

set(TLOGGING_SOURCES
    ${TLOGGING_INCLUDES_FILES}
    ${TLOGGING_SOURCES_FILES}
)

add_library(TLogging STATIC
    ${TLOGGING_SOURCES}
)

target_link_libraries(TLogging
    PRIVATE Base TabularData DataContainerManagement DataStructures Logging
)

set(VIDEO_RENDERING_VISUALIZER_MODEL_INCLUDES_FILES
    ../Model/core/CallInformation.h
    ../Model/core/CallInformationCollection.h
    ../Model/core/CompositorInformation.h
    ../Model/core/CompositorInformationCollection.h
    ../Model/core/DataModel.h
    ../Model/core/DataQuery.h
    ../Model/core/DataRepository.h
    ../Model/core/DurationDisplay.h
    ../Model/core/ModelCollection.h
    ../Model/core/ModelConstants.h
    ../Model/core/RenderingPipelineInformation.h
    ../Model/core/RenderingPipelineInformationCollection.h
    ../Model/core/TLogModelBuilder.h
    ../Model/core/TLogModelNotificationHandler.h
    ../Model/core/TLogNotificationHandler.h
    ../Model/core/VideoRenderingVisualizerModelException.h
    ../Model/interfaces/ICallInformation.h
    ../Model/interfaces/ICallInformationCollection.h
    ../Model/interfaces/ICompositorInformation.h
    ../Model/interfaces/ICompositorInformationCollection.h
    ../Model/interfaces/IDataModel.h
    ../Model/interfaces/IDataQuery.h
    ../Model/interfaces/IDataRepository.h
    ../Model/interfaces/IModelBuilder.h
    ../Model/interfaces/IModelCollection.h
    ../Model/interfaces/IRenderingPipelineInformation.h
    ../Model/interfaces/IRenderingPipelineInformationCollection.h
    ../Model/interfaces/RenderingStatus.h
)

set(VIDEO_RENDERING_VISUALIZER_MODEL_SOURCES_FILES
    ../Model/core/CallInformation.cpp
    ../Model/core/CallInformationCollection.cpp
    ../Model/core/CompositorInformation.cpp
    ../Model/core/CompositorInformationCollection.cpp
    ../Model/core/DataModel.cpp
    ../Model/core/DataQuery.cpp
    ../Model/core/DataRepository.cpp
    ../Model/core/DurationDisplay.cpp
    ../Model/core/ModelConstants.cpp
    ../Model/core/RenderingPipelineInformation.cpp
    ../Model/core/RenderingPipelineInformationCollection.cpp
    ../Model/core/TLogModelBuilder.cpp
    ../Model/core/TLogModelNotificationHandler.cpp
)

set(VIDEO_RENDERING_VISUALIZER_MODEL_INCLUDES
    ../Model/core
    ../Model/interfaces
)

set(VIDEO_RENDERING_VISUALIZER_MODEL_SOURCES
    ${VIDEO_RENDERING_VISUALIZER_MODEL_INCLUDES_FILES}
    ${VIDEO_RENDERING_VISUALIZER_MODEL_SOURCES_FILES}
)

add_library(VideoRenderingVisualizerModel STATIC
    ${VIDEO_RENDERING_VISUALIZER_MODEL_SOURCES}
)

target_link_libraries(VideoRenderingVisualizerModel
    PRIVATE Base TabularData DataContainerManagement DataStructures Logging TLogging
)

set(WXWIDGETS_INCLUDES_FILES
    ../../WXWidgets/Controller/core/AbstractTransaction.h
    ../../WXWidgets/Controller/core/ControllerManager.h
    ../../WXWidgets/Controller/core/RefreshingTransaction.h
    ../../WXWidgets/Controller/core/WXWidgetsControllerException.h
    ../../WXWidgets/Controller/interfaces/IControllerManager.h
    ../../WXWidgets/Controller/interfaces/IRefreshingTransaction.h
    ../../WXWidgets/Controller/interfaces/ITransaction.h
    ../../WXWidgets/DataItems/core/DataItemCatalog.h
    ../../WXWidgets/DataItems/core/WXDataItems.h
    ../../WXWidgets/DataItems/interfaces/IDataItemCatalog.h
    ../../WXWidgets/DataItems/interfaces/IDataItems.h
    ../../WXWidgets/DataItems/interfaces/IWXDataItems.h
    ../../WXWidgets/Events/interfaces/AbstractWXEvent.h
    ../../WXWidgets/Events/interfaces/IWXEvent.h
    ../../WXWidgets/Events/interfaces/PostRefreshEvent.h
    ../../WXWidgets/Events/interfaces/PostRefreshEventInternal.h
    ../../WXWidgets/Events/interfaces/PreRefreshEvent.h
    ../../WXWidgets/Events/interfaces/PreRefreshEventInternal.h
    ../../WXWidgets/Events/interfaces/RefreshEvent.h
    ../../WXWidgets/Events/interfaces/RefreshEventInternal.h
    ../../WXWidgets/Events/interfaces/TriggerEndRefreshingEvent.h
    ../../WXWidgets/Events/interfaces/TriggerEndRefreshingEventInternal.h
    ../../WXWidgets/Events/interfaces/TriggerStartRefreshingEvent.h
    ../../WXWidgets/Events/interfaces/TriggerStartRefreshingEventInternal.h
    ../../WXWidgets/Events/interfaces/WXEventIds.h
    ../../WXWidgets/Events/interfaces/WXEventImpl.h
    ../../WXWidgets/Events/interfaces/WindowUpdationEvent.h
    ../../WXWidgets/Events/interfaces/WindowUpdationEventInternal.h
    ../../WXWidgets/OpenGL/core/GLErrorCodes.h
    ../../WXWidgets/OpenGL/core/OpenGLApi.h
    ../../WXWidgets/OpenGL/core/OpenGLHeaders.h
    ../../WXWidgets/OpenGL/core/OpenGLInitializer.h
    ../../WXWidgets/OpenGL/interfaces/IOpenGLApi.h
    ../../WXWidgets/core/AbstractApp.h
    ../../WXWidgets/core/AbstractDialog.h
    ../../WXWidgets/core/AbstractFrame.h
    ../../WXWidgets/core/AbstractGLCanvas.h
    ../../WXWidgets/core/AbstractGuiComponent.h
    ../../WXWidgets/core/AbstractListBox.h
    ../../WXWidgets/core/AbstractListView.h
    ../../WXWidgets/core/AbstractSlider.h
    ../../WXWidgets/core/AbstractSplitterWindow.h
    ../../WXWidgets/core/AbstractWindow.h
    ../../WXWidgets/core/App.h
    ../../WXWidgets/core/BorderWindowConfiguration.h
    ../../WXWidgets/core/Color.h
    ../../WXWidgets/core/Dialog.h
    ../../WXWidgets/core/FolderDialog.h
    ../../WXWidgets/core/Font.h
    ../../WXWidgets/core/Frame.h
    ../../WXWidgets/core/GLCanvas.h
    ../../WXWidgets/core/GuiComponent.h
    ../../WXWidgets/core/GuiComponentData.h
    ../../WXWidgets/core/GuiComponentInformation.h
    ../../WXWidgets/core/GuiController.h
    ../../WXWidgets/core/GuiTransaction.h
    ../../WXWidgets/core/HtmlWindow.h
    ../../WXWidgets/core/ListBox.h
    ../../WXWidgets/core/ListView.h
    ../../WXWidgets/core/Menu.h
    ../../WXWidgets/core/MenuBar.h
    ../../WXWidgets/core/Panel.h
    ../../WXWidgets/core/RichTextControl.h
    ../../WXWidgets/core/Slider.h
    ../../WXWidgets/core/SplitterSubWindowConfiguration.h
    ../../WXWidgets/core/SplitterWindow.h
    ../../WXWidgets/core/SplitterWindowConfiguration.h
    ../../WXWidgets/core/StaticText.h
    ../../WXWidgets/core/TextControl.h
    ../../WXWidgets/core/WXEventHandler.h
    ../../WXWidgets/core/WXProperty.h
    ../../WXWidgets/core/WXWidgetsException.h
    ../../WXWidgets/core/Window.h
    ../../WXWidgets/core/WindowLogic.h
    ../../WXWidgets/interfaces/IApp.h
    ../../WXWidgets/interfaces/IBorderWindowConfiguration.h
    ../../WXWidgets/interfaces/ICanvas.h
    ../../WXWidgets/interfaces/IColor.h
    ../../WXWidgets/interfaces/IDialog.h
    ../../WXWidgets/interfaces/IFolderDialog.h
    ../../WXWidgets/interfaces/IFont.h
    ../../WXWidgets/interfaces/IFrame.h
    ../../WXWidgets/interfaces/IGuiComponent.h
    ../../WXWidgets/interfaces/IGuiComponentData.h
    ../../WXWidgets/interfaces/IGuiComponentInformation.h
    ../../WXWidgets/interfaces/IGuiController.h
    ../../WXWidgets/interfaces/IGuiTransaction.h
    ../../WXWidgets/interfaces/IHtmlWindow.h
    ../../WXWidgets/interfaces/IListBox.h
    ../../WXWidgets/interfaces/IListView.h
    ../../WXWidgets/interfaces/IMenu.h
    ../../WXWidgets/interfaces/IMenuBar.h
    ../../WXWidgets/interfaces/IPanel.h
    ../../WXWidgets/interfaces/ISlider.h
    ../../WXWidgets/interfaces/ISplitterSubWindowConfiguration.h
    ../../WXWidgets/interfaces/ISplitterWindow.h
    ../../WXWidgets/interfaces/ISplitterWindowConfiguration.h
    ../../WXWidgets/interfaces/IStaticText.h
    ../../WXWidgets/interfaces/ITextControl.h
    ../../WXWidgets/interfaces/IWXEventHandler.h
    ../../WXWidgets/interfaces/IWindow.h
    ../../WXWidgets/interfaces/IWindowLogic.h
    ../../WXWidgets/interfaces/Orient.h
    ../../WXWidgets/interfaces/WXObjectId.h
    ../../WXWidgets/interfaces/WXObjectPtr.h
    ../../WXWidgets/interfaces/WXObjectPtrs.h
)

set(WXWIDGETS_SOURCES_FILES
    ../../WXWidgets/Controller/core/AbstractTransaction.cpp
    ../../WXWidgets/Controller/core/ControllerManager.cpp
    ../../WXWidgets/Controller/core/RefreshingTransaction.cpp
    ../../WXWidgets/DataItems/core/DataItemCatalog.cpp
    ../../WXWidgets/DataItems/core/WXDataItems.cpp
    ../../WXWidgets/Events/core/PostRefreshEvent.cpp
    ../../WXWidgets/Events/core/PostRefreshEventInternal.cpp
    ../../WXWidgets/Events/core/PreRefreshEvent.cpp
    ../../WXWidgets/Events/core/PreRefreshEventInternal.cpp
    ../../WXWidgets/Events/core/RefreshEvent.cpp
    ../../WXWidgets/Events/core/RefreshEventInternal.cpp
    ../../WXWidgets/Events/core/TriggerEndRefreshingEvent.cpp
    ../../WXWidgets/Events/core/TriggerEndRefreshingEventInternal.cpp
    ../../WXWidgets/Events/core/TriggerStartRefreshingEvent.cpp
    ../../WXWidgets/Events/core/TriggerStartRefreshingEventInternal.cpp
    ../../WXWidgets/Events/core/WXEventIds.cpp
    ../../WXWidgets/Events/core/WindowUpdationEvent.cpp
    ../../WXWidgets/Events/core/WindowUpdationEventInternal.cpp
    ../../WXWidgets/OpenGL/core/GLErrorCodes.cpp
    ../../WXWidgets/OpenGL/core/OpenGLApi.cpp
    ../../WXWidgets/OpenGL/core/OpenGLInitializer.cpp
    ../../WXWidgets/core/AbstractApp.cpp
    ../../WXWidgets/core/AbstractDialog.cpp
    ../../WXWidgets/core/AbstractFrame.cpp
    ../../WXWidgets/core/AbstractGLCanvas.cpp
    ../../WXWidgets/core/AbstractGuiComponent.cpp
    ../../WXWidgets/core/AbstractListBox.cpp
    ../../WXWidgets/core/AbstractListView.cpp
    ../../WXWidgets/core/AbstractSlider.cpp
    ../../WXWidgets/core/AbstractSplitterWindow.cpp
    ../../WXWidgets/core/AbstractWindow.cpp
    ../../WXWidgets/core/App.cpp
    ../../WXWidgets/core/BorderWindowConfiguration.cpp
    ../../WXWidgets/core/Color.cpp
    ../../WXWidgets/core/Dialog.cpp
    ../../WXWidgets/core/FolderDialog.cpp
    ../../WXWidgets/core/Font.cpp
    ../../WXWidgets/core/Frame.cpp
    ../../WXWidgets/core/GLCanvas.cpp
    ../../WXWidgets/core/GuiComponent.cpp
    ../../WXWidgets/core/GuiComponentData.cpp
    ../../WXWidgets/core/GuiComponentInformation.cpp
    ../../WXWidgets/core/GuiController.cpp
    ../../WXWidgets/core/GuiTransaction.cpp
    ../../WXWidgets/core/HtmlWindow.cpp
    ../../WXWidgets/core/ListBox.cpp
    ../../WXWidgets/core/ListView.cpp
    ../../WXWidgets/core/Menu.cpp
    ../../WXWidgets/core/MenuBar.cpp
    ../../WXWidgets/core/Panel.cpp
    ../../WXWidgets/core/RichTextControl.cpp
    ../../WXWidgets/core/Slider.cpp
    ../../WXWidgets/core/SplitterSubWindowConfiguration.cpp
    ../../WXWidgets/core/SplitterWindow.cpp
    ../../WXWidgets/core/SplitterWindowConfiguration.cpp
    ../../WXWidgets/core/StaticText.cpp
    ../../WXWidgets/core/TextControl.cpp
    ../../WXWidgets/core/WXEventHandler.cpp
    ../../WXWidgets/core/WXObjectId.cpp
    ../../WXWidgets/core/WXProperty.cpp
    ../../WXWidgets/core/Window.cpp
    ../../WXWidgets/core/WindowLogic.cpp
)

set(WXWIDGETS_INCLUDES
    ../../WXWidgets/Controller/core
    ../../WXWidgets/Controller/interfaces
    ../../WXWidgets/DataItems/core
    ../../WXWidgets/DataItems/interfaces
    ../../WXWidgets/Events/interfaces
    ../../WXWidgets/OpenGL/core
    ../../WXWidgets/OpenGL/interfaces
    ../../WXWidgets/core
    ../../WXWidgets/interfaces
)

set(WXWIDGETS_SOURCES
    ${WXWIDGETS_INCLUDES_FILES}
    ${WXWIDGETS_SOURCES_FILES}
)

add_library(WXWidgets STATIC
    ${WXWIDGETS_SOURCES}
)

target_link_libraries(WXWidgets
    PRIVATE Base TabularData DataContainerManagement Logging
)

set(GUI_CONFIGURATION_INCLUDES_FILES
    ../../GuiConfiguration/core/AppConfiguration.h
    ../../GuiConfiguration/core/ClientConfiguration.h
    ../../GuiConfiguration/core/ConfigurationItemCatalog.h
    ../../GuiConfiguration/core/DialogConfiguration.h
    ../../GuiConfiguration/core/DialogsConfiguration.h
    ../../GuiConfiguration/core/FrameConfiguration.h
    ../../GuiConfiguration/core/FramesConfiguration.h
    ../../GuiConfiguration/core/GuiComponentsConfiguration.h
    ../../GuiConfiguration/core/GuiConfigurationException.h
    ../../GuiConfiguration/core/GuiConfigurationManager.h
    ../../GuiConfiguration/core/LabelConfiguration.h
    ../../GuiConfiguration/core/LabelsConfiguration.h
    ../../GuiConfiguration/core/MenuConfiguration.h
    ../../GuiConfiguration/core/MenuItemConfiguration.h
    ../../GuiConfiguration/core/MenuItemsConfiguration.h
    ../../GuiConfiguration/core/MenusConfiguration.h
    ../../GuiConfiguration/core/SliderConfiguration.h
    ../../GuiConfiguration/core/SlidersConfiguration.h
    ../../GuiConfiguration/interfaces/IAppConfiguration.h
    ../../GuiConfiguration/interfaces/IClientConfiguration.h
    ../../GuiConfiguration/interfaces/IConfigurationItemCatalog.h
    ../../GuiConfiguration/interfaces/IConfigurationItems.h
    ../../GuiConfiguration/interfaces/IDialogConfiguration.h
    ../../GuiConfiguration/interfaces/IDialogsConfiguration.h
    ../../GuiConfiguration/interfaces/IFrameConfiguration.h
    ../../GuiConfiguration/interfaces/IFramesConfiguration.h
    ../../GuiConfiguration/interfaces/IGuiComponentsConfiguration.h
    ../../GuiConfiguration/interfaces/IGuiConfigurationManager.h
    ../../GuiConfiguration/interfaces/ILabelConfiguration.h
    ../../GuiConfiguration/interfaces/ILabelsConfiguration.h
    ../../GuiConfiguration/interfaces/IMenuConfiguration.h
    ../../GuiConfiguration/interfaces/IMenuItemConfiguration.h
    ../../GuiConfiguration/interfaces/IMenuItemsConfiguration.h
    ../../GuiConfiguration/interfaces/IMenusConfiguration.h
    ../../GuiConfiguration/interfaces/ISliderConfiguration.h
    ../../GuiConfiguration/interfaces/ISlidersConfiguration.h
)

set(GUI_CONFIGURATION_SOURCES_FILES
    ../../GuiConfiguration/core/AppConfiguration.cpp
    ../../GuiConfiguration/core/ClientConfiguration.cpp
    ../../GuiConfiguration/core/ConfigurationItemCatalog.cpp
    ../../GuiConfiguration/core/DialogConfiguration.cpp
    ../../GuiConfiguration/core/DialogsConfiguration.cpp
    ../../GuiConfiguration/core/FrameConfiguration.cpp
    ../../GuiConfiguration/core/FramesConfiguration.cpp
    ../../GuiConfiguration/core/GuiConfigurationManager.cpp
    ../../GuiConfiguration/core/LabelConfiguration.cpp
    ../../GuiConfiguration/core/LabelsConfiguration.cpp
    ../../GuiConfiguration/core/MenuConfiguration.cpp
    ../../GuiConfiguration/core/MenuItemConfiguration.cpp
    ../../GuiConfiguration/core/MenuItemsConfiguration.cpp
    ../../GuiConfiguration/core/MenusConfiguration.cpp
    ../../GuiConfiguration/core/SliderConfiguration.cpp
    ../../GuiConfiguration/core/SlidersConfiguration.cpp
)

set(GUI_CONFIGURATION_INCLUDES
    ../../GuiConfiguration/core
    ../../GuiConfiguration/interfaces
)

set(GUI_CONFIGURATION_SOURCES
    ${GUI_CONFIGURATION_INCLUDES_FILES}
    ${GUI_CONFIGURATION_SOURCES_FILES}
)

add_library(GuiConfiguration STATIC
    ${GUI_CONFIGURATION_SOURCES}
)

target_link_libraries(GuiConfiguration
    PRIVATE Base TabularData DataContainerManagement Logging
)

include_directories(VideoRenderingVisualizer
    ${BASE_INCLUDES}
    ${DATA_CONTAINER_MANAGEMENT_INCLUDES}
    ${DATA_STRUCTURES_INCLUDES}
    ${GUI_CONFIGURATION_INCLUDES}
    ${LOGGING_INCLUDES}
    ${TABULAR_DATA_INCLUDES}
    ${TLOGGING_INCLUDES}
    ${VIDEO_RENDERING_VISUALIZER_INCLUDES}
    ${VIDEO_RENDERING_VISUALIZER_MODEL_INCLUDES}
    ${WXWIDGETS_INCLUDES}
)

add_executable(VideoRenderingVisualizer
    ${VIDEO_RENDERING_VISUALIZER_SOURCES}
)

target_link_libraries(VideoRenderingVisualizer
    PRIVATE Base TabularData DataContainerManagement DataStructures Logging TLogging VideoRenderingVisualizerModel WXWidgets GuiConfiguration
)


